--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.19.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.6.0",
     "react-native-paper-dates": "^0.15.1",
     "react-native-safe-area-context": "^4.5.0",
